--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Salas Luis Alberto</a>
+            <a class="navbar-brand" href="https://luissll.github.io/portafolio/">Salas Luis Alberto</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -250,4 +250,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
