--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <img src="https://scontent.ffma1-1.fna.fbcdn.net/v/t39.30808-6/477822290_1325506645255724_3494075169784015493_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeEj-AoQcC_rqscC5RtcAyDe1uHwFXQu74TW4fAVdC7vhCYgR44-laXMupHtRP21XM4tFuqlZknVLjoSs4g_K1P7&_nc_ohc=TCQCCcN4nYQQ7kNvwG_pzmI&_nc_oc=AdnoXqbkhJCAeanyW_2iXVJ7qygCbUBFIYkeed2-bz3SGPjGr-3PyqDzzWkIVfV-k2k&_nc_zt=23&_nc_ht=scontent.ffma1-1.fna&_nc_gid=dvkNvf0WOYOETc7zWSd4fw&oh=00_AfWIC8gkMGBp_PBwOIXu_OU1QLr1nwN2W_w67QiNjgX9Xg&oe=68ACF25A" alt="Salas Luis Alberto" class="profile-img">
+            <img src="https://avatars.githubusercontent.com/u/74471366?v=4" alt="Salas Luis Alberto" class="profile-img">
             <h1 class="hero-title">Salas Luis Alberto</h1>
             <p class="hero-subtitle">Desarrollador Web | Especialista en Automatización | Experto en Inteligencia Artificial</p>
             <a href="https://drive.google.com/file/d/1uVJ735dBx17_odaVzrj030R0MQjIFRiL/view?usp=drive_link" class="btn btn-download"><i class="fas fa-download me-2"></i>Descargar CV</a>
@@ -252,3 +252,4 @@
 </body>
 
 </html>
+
