--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Salas Luis Alberto. Todos los derechos reservados.</p>
+            <p><a href="https://luissll.github.io/recetas/" class="text-decoration-none">Mis recetas</a></p>
         </div>
     </footer>
 
@@ -252,4 +253,5 @@
 </body>
 
 </html>
+
 
